log
Fri, May 16, 2025  7:23:50 PM: 
 tests:  0|5
total_score: 0/70
3f0e54c
Fri, May 16, 2025  7:30:25 PM: 
 sudoku.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:55:15: error: unused variable 'l' [-Werror=unused-variable]
     int i,j,k,l;
               ^
cc1.exe: all warnings being treated as errors
f866f77
Fri, May 16, 2025  7:30:39 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
40c3da4
Fri, May 16, 2025  7:31:27 PM: 
 sudoku.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  2|4
total_score: 15/70
4769aa2
Fri, May 16, 2025  7:36:10 PM: 
 sudoku.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
60fd38b
Fri, May 16, 2025  7:38:41 PM: 
 sudoku.c | 15 +++++++--------
 1 file changed, 7 insertions(+), 8 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:53:14: error: 'k' undeclared (first use in this function)
              k=n->sudo[i][j];
              ^
sudoku.c:53:14: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:49:9: error: variable 'box' set but not used [-Werror=unused-but-set-variable]
     int box[9][10]={0};
         ^~~
sudoku.c:48:9: error: variable 'columnas' set but not used [-Werror=unused-but-set-variable]
     int columnas[9][10]={0};
         ^~~~~~~~
sudoku.c:47:9: error: variable 'filas' set but not used [-Werror=unused-but-set-variable]
     int filas[9][10]={0};
         ^~~~~
cc1.exe: all warnings being treated as errors
a19db26
Fri, May 16, 2025  7:39:04 PM: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 45/70
69dec43
Fri, May 16, 2025  7:40:34 PM: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  6|2
total_score: 45/70
a4d7b33
Fri, May 16, 2025  7:41:29 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
c8c69b5
Fri, May 16, 2025  7:42:55 PM: 
 sudoku.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
 tests:  7|1
total_score: 55/70
0b4678d
Fri, May 16, 2025  7:43:17 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
cd22532
Fri, May 16, 2025  7:44:09 PM: 
 sudoku.c | 17 ++++++-----------
 1 file changed, 6 insertions(+), 11 deletions(-)
 tests:  10|0
total_score: 70/70
593d91e
Fri, May 16, 2025  7:50:48 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
test.c:245:5: error: redefinition of 'main'
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
sudoku.c:127:5: note: previous definition of 'main' was here
 int main( int argc, char *argv[] ){
     ^~~~
7816f26
Fri, May 16, 2025  7:51:05 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|0
total_score: 70/70
52965f8
